--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "npm start --prefix angular",
     "serve": "npm run build && firebase emulators:start",
     "emulate": "firebase emulators:start",
-    "setup": "npm install --prefix angular && npm install --prefix functions",
+    "setup": "npm install --prefix angular && npm install --prefix functions && npm i",
     "build": "npm run build --prefix angular && npm run build --prefix functions",
     "lint": "npm run lint --prefix angular && npm run lint --prefix functions",
     "test": "npm run test --prefix angular && npm run test --prefix functions",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "npm run build && firebase deploy",
+    "android": "npx ionic cap run android --prefix angular"
   },
   "private": true,
   "devDependencies": {
