--- a/angular/ios/App/Podfile
+++ b/angular/ios/App/Podfile
@@ -12,6 +12,7 @@ def capacitor_pods
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorFirebaseCrashlytics', :path => '../../node_modules/@capacitor-firebase/crashlytics'
+  pod 'CapacitorFirebasePerformance', :path => '../../node_modules/@capacitor-firebase/performance'
 end
 
 target 'App' do
