--- a/angular/package.json
+++ b/angular/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^17.3.12",
     "@angular/service-worker": "^17.3.12",
     "@capacitor-firebase/crashlytics": "^6.1.0",
+    "@capacitor-firebase/performance": "^6.1.0",
     "@capacitor/android": "^6.1.2",
     "@capacitor/core": "^6.1.2",
     "@capacitor/ios": "^6.1.2",
