--- a/angular/angular.json
+++ b/angular/angular.json
@@ -33,7 +33,6 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/firebase-messaging-sw.js",
               "src/manifest.webmanifest"
             ],
             "styles": [
@@ -87,7 +86,7 @@
             }
           },
           "options": {
-            "host": "10.10.10.153"
+            "host": "10.1.34.37"
           },
           "defaultConfiguration": "development"
         },
@@ -108,7 +107,6 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/firebase-messaging-sw.js",
               "src/manifest.webmanifest"
             ],
             "styles": [
@@ -132,7 +130,8 @@
   "cli": {
     "schematicCollections": [
       "@angular-eslint/schematics"
-    ]
+    ],
+    "analytics": false
   },
   "schematics": {
     "@angular-eslint/schematics:application": {
